syntax = "proto3";

package omsclient;

option go_package = "./omsclient";

message OrderAddReq {
  int64       MemberId = 2;
  int64       CouponId = 3;
  string      OrderSn = 4;
  string   CreateTime = 5;
  string      MemberUsername = 6;
  double     TotalAmount = 7;
  double     PayAmount = 8;
  double     FreightAmount = 9;
  double     PromotionAmount = 10;
  double     IntegrationAmount = 11;
  double     CouponAmount = 12;
  double     DiscountAmount = 13;
  int64       PayType = 14;
  int64       SourceType = 15;
  int64       Status = 16;
  int64       OrderType = 17;
  string      DeliveryCompany = 18;
  string      DeliverySn = 19;
  int64       AutoConfirmDay = 20;
  int64       Integration = 21;
  int64       Growth = 22;
  string      PromotionInfo = 23;
  int64       BillType = 24;
  string      BillHeader = 25;
  string      BillContent = 26;
  string      BillReceiverPhone = 27;
  string      BillReceiverEmail = 28;
  string      ReceiverName = 29;
  string      ReceiverPhone = 30;
  string      ReceiverPostCode = 31;
  string      ReceiverProvince = 32;
  string      ReceiverCity = 33;
  string      ReceiverRegion = 34;
  string      ReceiverDetailAddress = 35;
  string      Note = 36;
  int64       ConfirmStatus = 37;
  int64       DeleteStatus = 38;
  int64       UseIntegration = 39;
  string   PaymentTime = 40;
  string   DeliveryTime = 41;
  string   ReceiveTime = 42;
  string   CommentTime = 43;
  string   ModifyTime = 44;
}

message OrderAddResp {
  string pong = 1;
}

message OrderListReq {
  int64 current = 1;
  int64 pageSize = 2;
  string      OrderSn = 3;
  string      MemberUsername = 4;
  int64       PayType = 5;
  int64       SourceType = 6;
  int64       Status = 7;
  int64       OrderType = 8;
}

message OrderListData{
  int64       Id = 1;
  int64       MemberId = 2;
  int64       CouponId = 3;
  string      OrderSn = 4;
  string   CreateTime = 5;
  string      MemberUsername = 6;
  double     TotalAmount = 7;
  double     PayAmount = 8;
  double     FreightAmount = 9;
  double     PromotionAmount = 10;
  double     IntegrationAmount = 11;
  double     CouponAmount = 12;
  double     DiscountAmount = 13;
  int64       PayType = 14;
  int64       SourceType = 15;
  int64       Status = 16;
  int64       OrderType = 17;
  string      DeliveryCompany = 18;
  string      DeliverySn = 19;
  int64       AutoConfirmDay = 20;
  int64       Integration = 21;
  int64       Growth = 22;
  string      PromotionInfo = 23;
  int64       BillType = 24;
  string      BillHeader = 25;
  string      BillContent = 26;
  string      BillReceiverPhone = 27;
  string      BillReceiverEmail = 28;
  string      ReceiverName = 29;
  string      ReceiverPhone = 30;
  string      ReceiverPostCode = 31;
  string      ReceiverProvince = 32;
  string      ReceiverCity = 33;
  string      ReceiverRegion = 34;
  string      ReceiverDetailAddress = 35;
  string      Note = 36;
  int64       ConfirmStatus = 37;
  int64       DeleteStatus = 38;
  int64       UseIntegration = 39;
  string   PaymentTime = 40;
  string   DeliveryTime = 41;
  string   ReceiveTime = 42;
  string   CommentTime = 43;
  string   ModifyTime = 44;
  repeated  OrderItemListData itemListData = 45;
  repeated  OrderOperateHistoryListData historyListData = 46;
}

message OrderListResp {
  int64 total = 1;
  repeated  OrderListData list = 2;
}

message OrderUpdateReq {
  int64       Id = 1;
  int64       Status = 2;
  string      DeliveryCompany = 3;
  string      DeliverySn = 4;
  string      Note = 5;
}

message OrderUpdateResp {
  string pong = 1;
}

message OrderDeleteByIdReq {
  repeated int64 Ids = 1;
}

message OrderDeleteReq {
  int64 UserId = 1;
  int64 OrderId = 2;
}

message OrderDeleteResp {
  string pong = 1;
}

message OrderListByMemberIdReq {
  int64 MemberId = 1;
}

message OrderListByMemberIdData{
  int32       Id = 1;
  string      OrderSn = 2;
  string      actualPrice = 3;
  string      orderStatusText = 4;
  string      handleOption = 5;
  repeated GoodsListByMemberIdData     goodsList = 6;

}
message GoodsListByMemberIdData{
  int32       Id = 1;
  string      goodsName = 2;
  string      number = 3;
  string      picUrl = 4;
  string      specifications = 5;
  string      price = 6;

}

message OrderListByMemberIdResp {
  int64 total = 1;
  repeated  OrderListByMemberIdData list = 2;
}

message OrderCancelReq {
  int64 UserId = 1;
  int64 OrderId = 2;
}

message OrderCancelResp {
  string pong = 1;
}

message OrderConfirmReq {
  int64 UserId = 1;
  int64 OrderId = 2;
}

message OrderConfirmResp {
  string pong = 1;
}

message OrderRefundReq {
  int64 UserId = 1;
  int64 OrderId = 2;
}

message OrderRefundResp {
  string pong = 1;
}

service OrderService {
  rpc OrderAdd(OrderAddReq) returns(OrderAddResp);
  rpc OrderList(OrderListReq) returns(OrderListResp);
  rpc OrderUpdate(OrderUpdateReq) returns(OrderUpdateResp);
  rpc OrderDelete(OrderDeleteReq) returns(OrderDeleteResp);
  rpc OrderListByMemberId(OrderListByMemberIdReq) returns(OrderListByMemberIdResp);
  rpc OrderCancel(OrderCancelReq) returns(OrderCancelResp);
  rpc OrderConfirm(OrderConfirmReq) returns(OrderConfirmResp);
  rpc OrderRefund(OrderRefundReq) returns(OrderRefundResp);
  rpc OrderDeleteById(OrderDeleteByIdReq) returns(OrderDeleteResp);


}

message CartItemAddReq {
  int64      ProductId = 2;
  int64      ProductSkuId = 3;
  int64      MemberId = 4;
  int64      Quantity = 5;
  float    Price = 6;
  string      ProductPic = 7;
  string      ProductName = 8;
  string      ProductSubTitle = 9;
  string      ProductSkuCode = 10;
  string      MemberNickname = 11;
  string  CreateDate = 12;
  string  ModifyDate = 13;
  int64      DeleteStatus = 14;
  int64      ProductCategoryId = 15;
  string      ProductBrand = 16;
  string      ProductSn = 17;
  string      ProductAttr = 18;
}

message CartItemAddResp {
  string pong = 1;
}

message CartItemListReq {
  int64      MemberId = 1;
}

message CartItemListData{
  int64      Id = 1;
  int64      ProductId = 2;
  int64      ProductSkuId = 3;
  int64      MemberId = 4;
  int64      Quantity = 5;
  int64    Price = 6;
  string      ProductPic = 7;
  string      ProductName = 8;
  string      ProductSubTitle = 9;
  string      ProductSkuCode = 10;
  string      MemberNickname = 11;
  string  CreateDate = 12;
  string  ModifyDate = 13;
  int64      DeleteStatus = 14;
  int64      ProductCategoryId = 15;
  string      ProductBrand = 16;
  string      ProductSn = 17;
  string      ProductAttr = 18;
}

message CartItemListResp {
  int64 total = 1;
  repeated  CartItemListData list = 2;
}

message CartItemUpdateReq {
  int64      Id = 1;
  int64      ProductId = 2;
  int64      ProductSkuId = 3;
  int64      MemberId = 4;
  int64      Quantity = 5;
  float    Price = 6;
  string      ProductPic = 7;
  string      ProductName = 8;
  string      ProductSubTitle = 9;
  string      ProductSkuCode = 10;
  string      MemberNickname = 11;
  string  CreateDate = 12;
  string  ModifyDate = 13;
  int64      DeleteStatus = 14;
  int64      ProductCategoryId = 15;
  string      ProductBrand = 16;
  string      ProductSn = 17;
  string      ProductAttr = 18;
}

message CartItemUpdateResp {
  string pong = 1;
}

message CartItemDeleteReq {
  int64      MemberId = 1;
  repeated int64 ids = 2;
}

message CartItemDeleteResp {
  string pong = 1;
}

service CartItemService {

  rpc CartItemAdd(CartItemAddReq) returns(CartItemAddResp);
  rpc CartItemList(CartItemListReq) returns(CartItemListResp);
  rpc CartItemUpdate(CartItemUpdateReq) returns(CartItemUpdateResp);
  rpc CartItemUpdateQuantity(CartItemUpdateReq) returns(CartItemUpdateResp);
  rpc CartItemDelete(CartItemDeleteReq) returns(CartItemDeleteResp);


}

message CompanyAddressAddReq {
  string  AddressName = 2;
  int64    SendStatus = 3;
  int64    ReceiveStatus = 4;
  string  Name = 5;
  string  Phone = 6;
  string  Province = 7;
  string  City = 8;
  string  Region = 9;
  string  DetailAddress = 10;
}

message CompanyAddressAddResp {
  string pong = 1;
}

message CompanyAddressListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message CompanyAddressListData{
  int64    Id = 1;
  string  AddressName = 2;
  int64    SendStatus = 3;
  int64    ReceiveStatus = 4;
  string  Name = 5;
  string  Phone = 6;
  string  Province = 7;
  string  City = 8;
  string  Region = 9;
  string  DetailAddress = 10;
}

message CompanyAddressListResp {
  int64 total = 1;
  repeated  CompanyAddressListData list = 2;
}

message CompanyAddressUpdateReq {
  int64    Id = 1;
  string  AddressName = 2;
  int64    SendStatus = 3;
  int64    ReceiveStatus = 4;
  string  Name = 5;
  string  Phone = 6;
  string  Province = 7;
  string  City = 8;
  string  Region = 9;
  string  DetailAddress = 10;
}

message CompanyAddressUpdateResp {
  string pong = 1;
}

message CompanyAddressDeleteReq {
  repeated int64 ids = 1;
}

message CompanyAddressDeleteResp {
  string pong = 1;
}

service CompanyAddressService {


  rpc CompanyAddressAdd(CompanyAddressAddReq) returns(CompanyAddressAddResp);
  rpc CompanyAddressList(CompanyAddressListReq) returns(CompanyAddressListResp);
  rpc CompanyAddressUpdate(CompanyAddressUpdateReq) returns(CompanyAddressUpdateResp);
  rpc CompanyAddressDelete(CompanyAddressDeleteReq) returns(CompanyAddressDeleteResp);


}

message OrderItemAddReq {
  int64    OrderId = 2;
  string    OrderSn = 3;
  int64    ProductId = 4;
  string    ProductPic = 5;
  string    ProductName = 6;
  string    ProductBrand = 7;
  string    ProductSn = 8;
  float  ProductPrice = 9;
  int64    ProductQuantity = 10;
  int64    ProductSkuId = 11;
  string    ProductSkuCode = 12;
  int64    ProductCategoryId = 13;
  string    PromotionName = 14;
  float  PromotionAmount = 15;
  float  CouponAmount = 17;
  float  IntegrationAmount = 18;
  float  RealAmount = 19;
  int64    GiftIntegration = 20;
  int64    GiftGrowth = 21;
  string    ProductAttr = 22;
}

message OrderItemAddResp {
  string pong = 1;
}

message OrderItemListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message OrderItemListData{
  int64    Id = 1;
  int64    OrderId = 2;
  string    OrderSn = 3;
  int64    ProductId = 4;
  string    ProductPic = 5;
  string    ProductName = 6;
  string    ProductBrand = 7;
  string    ProductSn = 8;
  float  ProductPrice = 9;
  int64    ProductQuantity = 10;
  int64    ProductSkuId = 11;
  string    ProductSkuCode = 12;
  int64    ProductCategoryId = 13;
  string    PromotionName = 14;
  float  PromotionAmount = 15;
  float  CouponAmount = 17;
  float  IntegrationAmount = 18;
  float  RealAmount = 19;
  int64    GiftIntegration = 20;
  int64    GiftGrowth = 21;
  string    ProductAttr = 22;
}

message OrderItemListResp {
  int64 total = 1;
  repeated  OrderItemListData list = 2;
}

message OrderItemUpdateReq {
  int64    Id = 1;
  int64    OrderId = 2;
  string    OrderSn = 3;
  int64    ProductId = 4;
  string    ProductPic = 5;
  string    ProductName = 6;
  string    ProductBrand = 7;
  string    ProductSn = 8;
  float  ProductPrice = 9;
  int64    ProductQuantity = 10;
  int64    ProductSkuId = 11;
  string    ProductSkuCode = 12;
  int64    ProductCategoryId = 13;
  string    PromotionName = 14;
  float  PromotionAmount = 15;
  float  CouponAmount = 17;
  float  IntegrationAmount = 18;
  float  RealAmount = 19;
  int64    GiftIntegration = 20;
  int64    GiftGrowth = 21;
  string    ProductAttr = 22;
}

message OrderItemUpdateResp {
  string pong = 1;
}

message OrderItemDeleteReq {
  repeated int64 ids = 1;
}

message OrderItemDeleteResp {
  string pong = 1;
}

service OrderItemService {


  rpc OrderItemAdd(OrderItemAddReq) returns(OrderItemAddResp);
  rpc OrderItemList(OrderItemListReq) returns(OrderItemListResp);
  rpc OrderItemUpdate(OrderItemUpdateReq) returns(OrderItemUpdateResp);
  rpc OrderItemDelete(OrderItemDeleteReq) returns(OrderItemDeleteResp);

}

message OrderOperateHistoryAddReq {
  int64      OrderId = 2;
  string    OperateMan = 3;
  string  CreateTime = 4;
  int64      OrderStatus = 5;
  string    Note = 6;
}

message OrderOperateHistoryAddResp {
  string pong = 1;
}

message OrderOperateHistoryListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message OrderOperateHistoryListData{
  int64      Id = 1;
  int64      OrderId = 2;
  string    OperateMan = 3;
  string  CreateTime = 4;
  int64      OrderStatus = 5;
  string    Note = 6;
}

message OrderOperateHistoryListResp {
  int64 total = 1;
  repeated  OrderOperateHistoryListData list = 2;
}

message OrderOperateHistoryUpdateReq {
  int64      Id = 1;
  int64      OrderId = 2;
  string    OperateMan = 3;
  string  CreateTime = 4;
  int64      OrderStatus = 5;
  string    Note = 6;
}

message OrderOperateHistoryUpdateResp {
  string pong = 1;
}

message OrderOperateHistoryDeleteReq {
  repeated int64 ids = 1;
}

message OrderOperateHistoryDeleteResp {
  string pong = 1;
}

service OrderOperateHistorService {


  rpc OrderOperateHistoryAdd(OrderOperateHistoryAddReq) returns(OrderOperateHistoryAddResp);
  rpc OrderOperateHistoryList(OrderOperateHistoryListReq) returns(OrderOperateHistoryListResp);
  rpc OrderOperateHistoryUpdate(OrderOperateHistoryUpdateReq) returns(OrderOperateHistoryUpdateResp);
  rpc OrderOperateHistoryDelete(OrderOperateHistoryDeleteReq) returns(OrderOperateHistoryDeleteResp);

}

message OrderReturnApplyAddReq {
  int64      OrderId = 1;
  int64      ProductId = 2;
  string      OrderSn = 3;
  string      MemberUsername = 4;
  string      ReturnName = 5;
  string      ReturnPhone = 6;
  int64      Status = 7;
  string      ProductPic = 8;
  string      ProductName = 9;
  string      ProductBrand = 10;
  string      ProductAttr = 11;
  int64      ProductCount = 12;
  float    ProductPrice = 13;
  float    ProductRealPrice = 14;
  string      Reason = 15;
  string      Description = 16;
  string      ProofPics = 17;
}

message OrderReturnApplyAddResp {
  string pong = 1;
}

message OrderReturnApplyListReq {
  int64 current = 1;
  int64 pageSize = 2;
  string  OrderSn = 3;
  string  MemberUsername = 4;
  string  HandleTime = 5;
  string  CreateTime = 6;
  int64   Status = 7;
}

message OrderReturnApplyListData{
  int64      Id = 1;
  int64      OrderId = 2;
  int64      CompanyAddressId = 3;
  int64      ProductId = 4;
  string      OrderSn = 5;
  string  CreateTime = 6;
  string      MemberUsername = 7;
  int64    ReturnAmount = 8;
  string      ReturnName = 9;
  string      ReturnPhone = 10;
  int64      Status = 11;
  string  HandleTime = 12;
  string      ProductPic = 13;
  string      ProductName = 14;
  string      ProductBrand = 15;
  string      ProductAttr = 16;
  int64      ProductCount = 17;
  int64    ProductPrice = 18;
  int64    ProductRealPrice = 19;
  string      Reason = 20;
  string      Description = 21;
  string      ProofPics = 22;
  string      HandleNote = 23;
  string      HandleMan = 24;
  string      ReceiveMan = 25;
  string  ReceiveTime = 26;
  string      ReceiveNote = 27;
}

message OrderReturnApplyListResp {
  int64 total = 1;
  repeated  OrderReturnApplyListData list = 2;
}

message OrderReturnApplyUpdateReq {
  int64      Id = 1;
  int64      CompanyAddressId = 2;
  int64      Status = 3;
  string      HandleNote = 4;
  string      HandleMan = 5;
  string      ReceiveMan = 6;
  string      ReceiveNote = 7;
}

message OrderReturnApplyUpdateResp {
  string pong = 1;
}

message OrderReturnApplyDeleteReq {
  repeated int64 ids = 1;
}

message OrderReturnApplyDeleteResp {
  string pong = 1;
}


service OrderReturnApplyService {


  rpc OrderReturnApplyAdd(OrderReturnApplyAddReq) returns(OrderReturnApplyAddResp);
  rpc OrderReturnApplyList(OrderReturnApplyListReq) returns(OrderReturnApplyListResp);
  rpc OrderReturnApplyUpdate(OrderReturnApplyUpdateReq) returns(OrderReturnApplyUpdateResp);
  rpc OrderReturnApplyDelete(OrderReturnApplyDeleteReq) returns(OrderReturnApplyDeleteResp);

}

message OrderReturnReasonAddReq {
  string      Name = 2;
  int64      Sort = 3;
  int64      Status = 4;
  string  CreateTime = 5;
}

message OrderReturnReasonAddResp {
  string pong = 1;
}

message OrderReturnReasonListReq {
  int64 current = 1;
  int64 pageSize = 2;
  string  Name = 3;
  int64 Status = 4;
}

message OrderReturnReasonListData{
  int64      Id = 1;
  string      Name = 2;
  int64      Sort = 3;
  int64      Status = 4;
  string  CreateTime = 5;
}

message OrderReturnReasonListResp {
  int64 total = 1;
  repeated  OrderReturnReasonListData list = 2;
}

message OrderReturnReasonUpdateReq {
  int64      Id = 1;
  string      Name = 2;
  int64      Sort = 3;
  int64      Status = 4;
  string  CreateTime = 5;
}

message OrderReturnReasonUpdateResp {
  string pong = 1;
}

message OrderReturnReasonDeleteReq {
  repeated int64 ids = 1;
}

message OrderReturnReasonDeleteResp {
  string pong = 1;
}

service OrderReturnReasonService {

  rpc OrderReturnReasonAdd(OrderReturnReasonAddReq) returns(OrderReturnReasonAddResp);
  rpc OrderReturnReasonList(OrderReturnReasonListReq) returns(OrderReturnReasonListResp);
  rpc OrderReturnReasonUpdate(OrderReturnReasonUpdateReq) returns(OrderReturnReasonUpdateResp);
  rpc OrderReturnReasonDelete(OrderReturnReasonDeleteReq) returns(OrderReturnReasonDeleteResp);


}

message OrderSettingAddReq {
  int64  FlashOrderOvertime = 2;
  int64  NormalOrderOvertime = 3;
  int64  ConfirmOvertime = 4;
  int64  FinishOvertime = 5;
  int64  CommentOvertime = 6;
}

message OrderSettingAddResp {
  string pong = 1;
}

message OrderSettingListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message OrderSettingListData{
  int64  Id = 1;
  int64  FlashOrderOvertime = 2;
  int64  NormalOrderOvertime = 3;
  int64  ConfirmOvertime = 4;
  int64  FinishOvertime = 5;
  int64  CommentOvertime = 6;
}

message OrderSettingListResp {
  int64 total = 1;
  repeated  OrderSettingListData list = 2;
}

message OrderSettingUpdateReq {
  int64  Id = 1;
  int64  FlashOrderOvertime = 2;
  int64  NormalOrderOvertime = 3;
  int64  ConfirmOvertime = 4;
  int64  FinishOvertime = 5;
  int64  CommentOvertime = 6;
}

message OrderSettingUpdateResp {
  string pong = 1;
}

message OrderSettingDeleteReq {
  repeated int64 ids = 1;
}

message OrderSettingDeleteResp {
  string pong = 1;
}

service OrderSettingService {

  rpc OrderSettingAdd(OrderSettingAddReq) returns(OrderSettingAddResp);
  rpc OrderSettingList(OrderSettingListReq) returns(OrderSettingListResp);
  rpc OrderSettingUpdate(OrderSettingUpdateReq) returns(OrderSettingUpdateResp);
  rpc OrderSettingDelete(OrderSettingDeleteReq) returns(OrderSettingDeleteResp);
}
